--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -5,7 +5,7 @@
     <title>Admin</title>
     <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script>
-        const admin_phone = 1;
+        const admin_phone = "zzzaaa";
     </script>
     {% block script %}{% endblock %}
 </head>
