--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script>
         const admin_phone = "zzzaaa";
+        const isAdmin = true;
     </script>
     {% block script %}{% endblock %}
 </head>
