--- a/templates/sellerManage.html
+++ b/templates/sellerManage.html
@@ -5,6 +5,7 @@
     <script src="/static/js/render_items.js"></script>
     <script>
     let phone = "{{ phone }}"
+    let type = 0;
     let user_info_box
     let user_amount_box
 
