--- a/templates/userInfo.html
+++ b/templates/userInfo.html
@@ -24,7 +24,9 @@
 {% extends "base.html" %}
 
 {% block script %}
+    <script src="/static/js/modify_user_info.js"></script>
     <script src="/static/js/render_user_info.js"></script>
+    <script src="/static/js/logout.js"></script>
     <script>
     let user_info_box;
     let user_amount_box;
@@ -38,12 +40,57 @@
         $("title").innerText = name;
 
         {#default to get and render buyer information#}
+        get_user_image($(".user-image"))
         render_user_info();
     });
     </script>
 {% endblock %}
 
 {% block main %}
-<div class="user-info-box"></div>
-<div class="user-amount-box"></div>
+    <div class="user-info-box">
+
+        <div class="info-div" id="img-div">
+            <form class="img-form">
+                <button type="button" onclick="$('#file').click();">
+                    <img class="user-image">
+                </button>
+                <input type="file" name="file" id="file" accept="image/*" style="display: none">
+            </form>
+        </div>
+
+        <div class="info-div" id="phone-div">
+            <label class="phone-span"></label>
+        </div>
+
+        <div class="info-div" id="name-div">
+            <label class="name-span">
+                Name:
+                <input type="text" id="name">
+            </label>
+        </div>
+
+        <div class="info-div" id="introduction-div">
+            <label class="introduction-span">
+                Introduction:
+                <input type="text" id="introduction">
+            </label>
+        </div>
+
+        <div class="info-div" id="password-div">
+            <label class="password-span">
+                Password:
+                <input type="text" id="password">
+            </label>
+        </div>
+
+        <div class="confirm-box">
+            <button type="button" class="confirm-button" onclick="modify_user_info()">Confirm</button>
+        </div>
+
+        <div class="logout-box">
+            <button type="button" class="logout-button" onclick="logout()">Logout</button>
+        </div>
+    </div>
+
+    <div class="user-amount-box"></div>
 {% endblock %}
