--- a/templates/sellerManage.html
+++ b/templates/sellerManage.html
@@ -1,17 +1,16 @@
 {% extends "base_admin.html" %}
 
 {% block script %}
+    <script src="/static/js/modify_user_info.js"></script>
     <script src="/static/js/render_user_info.js"></script>
-    <script src="/static/js/render_items.js"></script>
+    <script src="/static/js/charge.js"></script>
+    <script src="/static/js/render_money.js"></script>
+    <script src="/static/js/upload_user_image.js"></script>
     <script>
     let phone = "{{ phone }}"
     let type = 0;
-    let user_info_box
-    let user_amount_box
 
     window.onload = function (){
-        user_info_box = $(".user-info-box")
-        user_amount_box = $(".user-amount-box")
         get_and_render_user_info()
     }
 
@@ -29,6 +28,66 @@
 {% endblock %}
 
 {% block body %}
-<div class="user-info-box"></div>
-<div class="user-amount-box"></div>
+    <div class="user-info-box">
+
+        <div class="info-div" id="img-div">
+            <form class="img-form">
+                <button type="button" onclick="$('#file').click();">
+                    <img class="user-image">
+                </button>
+                <input type="hidden" name="phone" value="" class="phone">
+                <input type="file" name="file" id="file" accept="image/*" onchange="upload_user_image(new FormData())" style="display: none">
+            </form>
+        </div>
+
+        <div class="info-div" id="phone-div">
+            <label class="phone-span"></label>
+        </div>
+
+        <div class="info-div" id="name-div">
+            <label class="name-span">
+                Name:
+                <input type="text" id="name">
+            </label>
+        </div>
+
+        <div class="info-div" id="introduction-div">
+            <label class="introduction-span">
+                Introduction:
+                <input type="text" id="introduction">
+            </label>
+        </div>
+
+        <div class="info-div" id="password-div">
+            <label class="password-span">
+                Password:
+                <input type="text" id="password">
+            </label>
+        </div>
+
+        <div class="confirm-box">
+            <button type="button" class="confirm-button" onclick="modify_user_info()">Confirm</button>
+        </div>
+
+        <div class="logout-box">
+            <button type="button" class="logout-button" onclick="logout()">Logout</button>
+        </div>
+    </div>
+
+    <div class="user-amount-box">
+        <div class="current-money-box">
+            <span class="current-money"></span>
+        </div>
+
+        <div class="charge-money-box">
+            <form class="charge-form">
+                <input type="number" placeholder="amount: " id="charge-money" name="charge_num">
+                <input type="hidden" name="phone" value="" class="phone">
+            </form>
+        </div>
+
+        <div class="submit-charge-div">
+            <button class="submit-charge" type="button" onclick="charge(new FormData($('.charge-form')[0]))">Charge</button>
+        </div>
+    </div>
 {% endblock %}
