--- a/templates/sellerManage.html
+++ b/templates/sellerManage.html
@@ -1,12 +1,11 @@
 {% extends "base_admin.html" %}
 
 {% block script %}
-    <script src="/static/js/modify_user_info.js"></script>
     <script src="/static/js/render_user_info.js"></script>
     <script src="/static/js/get_user_image.js"></script>
-    <script src="/static/js/charge.js"></script>
-    <script src="/static/js/render_money.js"></script>
-    <script src="/static/js/upload_user_image.js"></script>
+    <script src="/static/js/reset_user_introduction.js"></script>
+    <script src="/static/js/reset_user_name.js"></script>
+    <script src="/static/js/reset_user_image.js"></script>
     <script>
     let phone = "{{ phone }}"
     let type = "0"
@@ -22,30 +21,37 @@
     <div class="user-info-box">
 
         <div class="img-div">
-            <form class="img-form">
-                <button type="button" onclick="$('#file').click();">
-                    <img class="user-image">
-                </button>
-                <input type="file" name="image" id="file" accept="image/*" onchange="upload_user_image(new FormData($('.img-form')[0]), phone)" style="display: none">
-            </form>
+            <img class="user-image">
         </div>
 
         <form class="info-form">
             <div class="info-div" id="phone-div">
-                <span class="phone-span"></span>
+                <span id="phone-span"></span>
             </div>
 
             <div class="info-div" id="name-div">
-                <span class="name-span"></span>
+                <span id="name-span"></span>
             </div>
 
             <div class="info-div" id="introduction-div">
-                <span class="introduction-span"></span>
+                <span id="introduction-span"></span>
             </div>
 
             <div class="info-div" id="password-div">
-                <span class="password-span"></span>
+                <span id="password-span"></span>
             </div>
         </form>
+
+        <div class="operation-box">
+            <div class="reset-user-image">
+                <button type="button" onclick="reset_user_image($('.user-image'), phone)" class="operation-button">Reset Image</button>
+            </div>
+            <div class="reset-user-name">
+                <button type="button" onclick="reset_user_name(type, phone)" class="operation-button">Reset Name</button>
+            </div>
+            <div class="reset-user-introduction">
+                <button type="button" onclick="reset_user_introduction(type, phone)" class="operation-button">Reset Introduction</button>
+            </div>
+        </div>
     </div>
 {% endblock %}
