--- a/templates/register.html
+++ b/templates/register.html
@@ -25,6 +25,12 @@ register
     <script>
     let user_type;
 
+    window.onload = function (){
+        $("#phone")[0].onkeyup = function (){
+            phone_is_valid()
+        }
+    }
+
     {#
     update for register
     execute this function when user attmpt to register
@@ -56,6 +62,20 @@ register
             }
         })
     }
+
+    function phone_is_valid(){
+        const phone = $("#phone").val()
+        if (isNaN(phone)){
+            $(".phone-message")[0].innerText = "NAN"
+            $("#phone")[0].style.border = "2px solid red"
+        }else if (phone.length<5 || phone.length>20) {
+            $(".phone-message")[0].innerText = "length invalid"
+            $("#phone")[0].style.border = "2px solid red"
+        }else {
+            $(".phone-message")[0].innerText = ""
+            $("#phone")[0].style.border = "2px solid black"
+        }
+    }
     </script>
 {% endblock %}
 
@@ -72,6 +92,7 @@ register
 
     <div class="phone">
         <input type="text" id="phone" placeholder="phone">
+        <span class="phone-message"></span>
     </div>
 
     <div class="password">
