--- a/templates/shop.html
+++ b/templates/shop.html
@@ -53,7 +53,7 @@
         get_and_render_prev_button();
 
         if (type==="1"){
-            const search_box = $(".search-box");
+            const search_box = $("#search-box");
             search_box.css("display", "block");
             search_box.keyup(function (){
                 get_and_render_items();
