--- a/templates/base.html
+++ b/templates/base.html
@@ -125,10 +125,13 @@
     <div class="search-box">
         <input type="search" id="search-box" placeholder="search" style="display: none">
     </div>
-    <div class="mode-button"></div>
 {#用户operation#}
+    <div class="home-box">
+        <a href="/shop">Home</a>
+    </div>
     <div class="user-operation">
     </div>
+    <div class="mode-button"></div>
 {#用户info#}
     <div class="user-box">
         <div class="user-img">
