--- a/static/css/login.css
+++ b/static/css/login.css
@@ -19,8 +19,13 @@
     width: 250px;
     font-size: 20px;
     border-radius: 10px;
+    color: var(--text-color);
     background: linear-gradient(to right, var(--input-gradient-start), var(--input-gradient-end));
     border: 2px solid var(--input-border-color);
+}
+
+.login-background-div input::placeholder {
+    color: var(--text-color);
 }
 
 .login-background-div .register a {
