--- a/static/css/item.css
+++ b/static/css/item.css
@@ -1,5 +1,5 @@
 /*
-    The following code is the CSS for the item page (item.html).
+    The following code is the CSS for the item page (itemBuyer.html).
 */
 
 .comment-box,
