--- a/templates/base.html
+++ b/templates/base.html
@@ -52,8 +52,7 @@
                 phone = data.phone;
                 type = data.type;
                 name = data.name;
-                {#light_mode = data.light_mode;#}
-                light_mode = true;
+                light_mode = data.light_mode;
 
                 {#generate tag#}
                 const a = document.createElement("a");
@@ -63,14 +62,15 @@
                     type: "button"
                 })
                 page_style_button.onclick = function (){
-                    light_mode = !light_mode;
-                    if (light_mode){
+                    if (!light_mode){
                         this.innerText = "Light Mode";
                         document.body.classList.toggle("");
                     }else {
                         this.innerText = "Dark Mode";
                         document.body.classList.toggle('dark-mode');
                     }
+                    light_mode = !light_mode;
+                    console.log(light_mode)
                 }
                 page_style_button.innerText = light_mode?"Light Mode":"Dark Mode";
                 if (type==="0"){
