--- a/templates/shop.html
+++ b/templates/shop.html
@@ -56,6 +56,7 @@
             const search_box = $("#search-box");
             search_box.css("display", "block");
             search_box.keyup(function (){
+                page_num = 1;
                 get_and_render_items();
             })
             render_buyer();
