--- a/templates/itemBuyer.html
+++ b/templates/itemBuyer.html
@@ -50,91 +50,7 @@
     $(document).on("sessionLoaded", function () {
         render_item_info(product_id)
         render_basic_comment($(".comment-box"), product_id)
-
-        {#buyer#}
-        if (type === "1") {
-            render_buyer();
-        } else if (type === "0") {
-            render_seller();
-        }
     });
-
-    function render_buyer() {
-        const operation_box = $(".operation-box");
-        operation_box.empty();
-
-        const buy_num = document.createElement("input");
-        buy_num.setAttribute("type", "num");
-        buy_num.setAttribute("placeHolder", "buy number");
-        buy_num.setAttribute("id", "buy-num");
-
-        const buy_button = document.createElement("button");
-        buy_button.setAttribute("id", "buy-button");
-        buy_button.innerText = "BUY";
-        buy_button.onclick = function () {
-            $.ajax({
-                url: "/buyer/buyItem",
-                type: "get",
-                contentType: "application/json",
-                dataType: "json",
-                data: {
-                    product_id: "{{ product_id }}",
-                    phone: phone,
-                    quantity: buy_num.value,
-                },
-                success: function (data) {
-                    alert(data.message);
-                    if (data.success) {
-                        get_and_render_item_data();
-                    }
-                }
-            })
-        };
-        operation_box.append(buy_num);
-        operation_box.append(buy_button);
-    }
-
-    function render_seller(){
-        const operation_box = $(".operation-box");
-        operation_box.empty();
-
-        //Delete BUTTON
-        const delete_button_div = document.createElement("button")
-        const delete_button = document.createElement("button")
-        delete_button_div.setAttribute("class", "delete-button-box")
-        delete_button.setAttribute("type", "button")
-        delete_button.setAttribute("class", "delete-button")
-        delete_button.innerText = "Delete"
-        delete_button.onclick = function (){
-            $.ajax({
-                url:"/products/deleteItem",
-                type:"get",
-                data:{product_id: product_id},
-                success: function (data){
-                    alert(data.message)
-                    window.location.replace("/shop")
-                }
-            })
-        }
-        delete_button_div.append(delete_button);
-        operation_box.append(delete_button_div)
-    }
-
-    function get_and_render_comment(){
-        $.ajax({
-            url: "/comment/commentBasicInfoById",
-            type: "get",
-            contentType: "application/json",
-            dataType: "json",
-            data: {
-                product_id: "{{ product_id }}"
-            },
-            success: function (data) {
-                render_comment(data)
-                render_more_comment_button()
-            }
-        })
-    }
     </script>
 {% endblock %}
 
@@ -169,6 +85,9 @@
 
 <div class="right-box">
     <div class="comment-box"></div>
+    <div class="more-comment-box">
+        <button class="more-comment-button" type="button" onclick="window.location.href = '/comment'"></button>
+    </div>
 </div>
 
 <div class="back-button-box">
