--- a/templates/itemSeller.html
+++ b/templates/itemSeller.html
@@ -81,6 +81,15 @@
             <span id="item-storage"></span>
         </div>
     </div>
+
+    <div class="buyer-box">
+        <div class="buy-amount-box">
+            <input type="number" id="buy-amount" placeholder="amount">
+        </div>
+        <div class="buy-box">
+            <button class="buy-button" type="button" onclick="buy_item($('#buy-amount'), product_id, phone)">BUY</button>
+        </div>
+    </div>
 </div>
 
 <div class="right-box">
