--- a/templates/itemSeller.html
+++ b/templates/itemSeller.html
@@ -82,12 +82,9 @@
         </div>
     </div>
 
-    <div class="buyer-box">
-        <div class="buy-amount-box">
-            <input type="number" id="buy-amount" placeholder="amount">
-        </div>
-        <div class="buy-box">
-            <button class="buy-button" type="button" onclick="buy_item($('#buy-amount'), product_id, phone)">BUY</button>
+    <div class="seller-box">
+        <div class="delete-box">
+            <button class="buy-button" type="button" onclick="delete_item(product_id)">BUY</button>
         </div>
     </div>
 </div>
