--- a/templates/itemBuyer.html
+++ b/templates/itemBuyer.html
@@ -95,7 +95,7 @@
 <div class="right-box">
     <div class="comment-box"></div>
     <div class="more-comment-box">
-        <button class="more-comment-button" type="button" onclick="window.location.href = '/comment'"></button>
+        <button class="more-comment-button" type="button" onclick="window.location.href = '/comment'">More Comment</button>
     </div>
 </div>
 
