--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,6 @@
 
     window.onload = function (){
         {#alert_message("test")#}
-        switch_mode()
         get_session();
     }
 
@@ -52,7 +51,14 @@
                 phone = data.phone;
                 type = data.type;
                 name = data.name;
-                light_mode = data.light_mode;
+
+
+                const mode_button = $(".mode-button")
+                if (light_mode){
+                    mode_button.text("light mode");
+                }else {
+                    mode_button.text("dark mode")
+                }
 
                 {#generate tag#}
                 const a = document.createElement("a");
@@ -71,7 +77,7 @@
                     a.setAttribute("href", "/login");
                     a.innerText = "Login";
                 }
-                $(".user-name").append(a);x
+                $(".user-name").append(a);
                 $(".user-operation").append(operation);
 
                 {#execue functions#}
@@ -93,15 +99,6 @@
             }
         })
     }
-    function get_mode(){
-        $.ajax({
-            url:"/user/getMode",
-            type:"get",
-            success:function (data) {
-                light_mode = data.mode;
-            }
-        })
-    }
 
     function switch_mode(){
         const mode_button = $(".mode-button")
@@ -111,9 +108,9 @@
             success:function (data){
                 light_mode = data.mode;
                 if (light_mode){
-                    mode_button.innerText = "light mode"
+                    mode_button.text("light mode");
                 }else {
-                    mode_button.innerText = "dark mode"
+                    mode_button.text("dark mode")
                 }
                 document.body.classList.toggle('dark-mode');
             }
@@ -122,7 +119,7 @@
     </script>
      {% block script %}{% endblock %}
 </head>
-<body>
+<body class="{{ user_mode }}">
 <div class="top-box">
 {#LOGO#}
     <div class="logo-box">
@@ -141,7 +138,7 @@
     <div class="user-operation-box">
     </div>
     <div class="mode-button-box">
-        <button class="mode-button"></button>
+        <button class="mode-button" type="button" onclick="switch_mode()"></button>
     </div>
 {#用户info#}
     <div class="user-box">
